--- a/apps/docs/src/app.postcss
+++ b/apps/docs/src/app.postcss
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+.debug {
+	background-color: darkcyan;
+	border: 1px pink solid;
+}
