--- a/apps/docs/src/app.postcss
+++ b/apps/docs/src/app.postcss
@@ -7,3 +7,8 @@
 	background-color: darkcyan;
 	border: 1px pink solid;
 }
+
+.editor-area {
+	background-color: darkcyan;
+	border: 1px pink solid;
+}
