--- a/apps/docs/src/app.postcss
+++ b/apps/docs/src/app.postcss
@@ -4,8 +4,9 @@
 @tailwind variants;
 
 .flexilte-debug {
-	background-color: darkcyan;
-	border: 1px pink solid;
+	background-color: rgba(50, 205, 50, 0.2);
+	border: 1px solid #32cd32;
+	
 }
 
 .editor-area {
